Por Igor Monárdez: Trabalho final

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -12,6 +12,8 @@
   </header>
   <body>
   <%= render 'layouts/header_admins_backoffice' %>
-  <%= yield %>
+  <div class="container-sm">
+    <%= yield %>
+  </div>
   </body>
 </html>
