--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -12,6 +12,8 @@
   </head>
   <body>
   <%= render 'layouts/header_users_backoffice' %>
-  <%= yield %>
+  <div class="container-sm">
+    <%= yield %>
+  </div>
   </body>
 </html>
