--- a/app/views/admins_backoffice/users/index.html.erb
+++ b/app/views/admins_backoffice/users/index.html.erb
@@ -1,42 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <th><%= link_to 'Novo usuário',  new_admins_backoffice_user_path %></th>
-<table id="example" class="table table-striped table-bordered" style="width:100%">
-  <thead>
-  <tr>
-    <th>Email</th>
-    <th>Nome</th>
-    <th>iduff</th>
-    <th>Ativo</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= user.email %></td>
-      <td><%= user.name %></td>
-      <td><%= user.iduff %></td>
-      <td><%= user.active %></td>
 
-      <td><%= link_to 'Olhar', admins_backoffice_user_path(user),class: "btn" %></td>
-      <% if user != current_user %>
-        <td><%= link_to 'Editar', edit_admins_backoffice_user_path(user),class: "btn" %></td>
-        <% if user.active %>
-          <td><%= link_to 'Desativar',  admins_backoffice_user_destroy_user_path(user),class: "btn", data: { confirm: 'Tem certeza?' } %></td>
-        <% else%>
-          <td><%= link_to 'Reative',  admins_backoffice_user_reactive_user_path(user),class: "btn" , data: { confirm: 'Tem certeza?' } %></td>
-        <%end %>
-      <% end %>
-    </tr>
-  <% end %>
-  <tfoot>
-  <tr>
-    <th>ID</th>
-    <th>Email</th>
-    <th>Nome</th>
-    <th>iduff</th>
+<%# form_with url: "/admins_backoffice/search_user", method: :get do |form| %>
+  <%# form.label :query, "Procura por Usuários" %>
+  <%# form.text_field :query, id: "search-user" %>
+<%# end %>
 
-  </tr>
-  </tfoot>
-</table>
+<form action="/admins_backoffice/search_user" method="get">
+  <input type="text" name="query" id="search-user">
+</form>
+
+<%= render 'results'%>
+<%= javascript_pack_tag 'busca_usuario' %>
 
