--- a/app/views/users_backoffice/caronas/search.html.erb
+++ b/app/views/users_backoffice/caronas/search.html.erb
@@ -2,8 +2,8 @@
 <table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
   <tr>
+    <th>Usuário</th>
     <th>Preço</th>
-    <th>Passageiros</th>
     <th>Hora e data</th>
     <th>Partida</th>
     <th>Chegada</th>
@@ -17,8 +17,14 @@
       <td>  <%= result.preco %> </td>
       <td>  <%= result.qtd_passageiros %> </td>
       <td>  <%= result.date_hour %> </td>
-      <td>  <%= result.departure %> </td>
-      <td>  <%= result.arrival %> </td>
+      <td>
+        <%= result.departure %> <br>
+        <strong>  <%= result.bairro_departure %>  </strong>
+      </td>
+      <td>
+        <%= result.arrival %><br>
+        <strong>  <%= result.bairro_arrival %>  </strong>
+      </td>
   </tr>
     <% end %>
   </tbody>
