--- a/app/views/users_backoffice/welcome/index.html.erb
+++ b/app/views/users_backoffice/welcome/index.html.erb
@@ -2,10 +2,12 @@
 
 <%= form_tag(users_backoffice_user_search_carona_path(current_user), :method => "get") do %>
   <div class="input-group">
-    <%= search_field_tag :search, params[:departure], placeholder: "Partida" %>
-    <%= search_field_tag :search, params[:arrival], placeholder: "Chegada" %>
+    <%= search_field_tag :departure, params[:departure], placeholder: "Bairro de partida ou nome do campus" %>
+    <%= search_field_tag :arrival, params[:arrival], placeholder: "Bairro de chegada ou nome do campus" %>
     <div class="input-group-btn">
       <%= button_tag "Procure por carona", class: 'btn btn-info glyphicon glyphicon-search',  name: nil %>
     </div>
   </div>
 <% end %>
+
+
