--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<p>current_user.iduff #=> <%= current_user.iduff %></p>
-<p>current_user.ip #=> <%= current_user.ip %></p>
-<p>usuario_logado? #=> <%= logged_in? %></p>
+<p><%= current_user.iduff %></p>
+<p><%= current_user.ip %></p>
+<p><%= logged_in? %></p>
