--- a/app/views/admins_backoffice/campus/index.html.erb
+++ b/app/views/admins_backoffice/campus/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<th><%= link_to 'Novo Campu', new_admins_backoffice_campu_path %></th>
+<th><%= button_to 'Novo Campu', new_admins_backoffice_campu_path %></th>
 <table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
