--- a/app/views/admins_backoffice/users/show.html.erb
+++ b/app/views/admins_backoffice/users/show.html.erb
@@ -1,7 +1,10 @@
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<p id="notice"><%= notice %></p>
+
+<p >
+    <strong>Name:</strong>
+    <span id='user-name'><%= @user.name %></span>
+  </p>
+
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
