--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -11,7 +11,7 @@
 
   </header>
   <body>
-  <%= render 'layouts/header_admins_backoffice' %>
+  <%= render 'layouts/header_site' %>
   <div class="container-sm">
     <%= yield %>
   </div>
