--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  <%= render 'layouts/header_users_backoffice' %>
+  <%= render 'layouts/header_site' %>
   <div class="container-sm">
     <%= yield %>
   </div>
