--- a/app/views/users_backoffice/caronas/_form.html.erb
+++ b/app/views/users_backoffice/caronas/_form.html.erb
@@ -21,36 +21,36 @@
     </div>
 
     <div class="col-sm-2">
-      <%= form.label :passageiros %>
+      <%= form.label :qtd_passageiros %>
       <%= form.number_field :qtd_passageiros , autocomplete: false, class: "form-control"%>
     </div>
 
     <div class="col">
-      <%= form.label :comentarios %>
+      <%= form.label :comments %>
       <%= form.text_field :comments, autocomplete: false, class: "form-control" %>
     </div>
 
   </div>
   <div class="row">
     <div class="col">
-      <%= form.label :partida %>
+      <%= form.label :departure %>
       <%= form.text_field :departure, autocomplete: false, class: "form-control" %>
     </div>
 
     <div class="col">
-      <%= form.label :bairro_partida %>
+      <%= form.label :bairro_departure %>
       <%= form.text_field :bairro_departure, autocomplete: false, class: "form-control" %>
     </div>
   </div>
 
   <div class="row">
     <div class="col">
-      <%= form.label :chegada %>
+      <%= form.label :arrival %>
       <%= form.text_field :arrival, autocomplete: false, class: "form-control" %>
     </div>
 
     <div class="col">
-      <%= form.label :bairro_chegada %>
+      <%= form.label :bairro_arrival %>
       <%= form.text_field :bairro_arrival, autocomplete: false, class: "form-control" %>
     </div>
   </div>
