--- a/app/views/users_backoffice/caronas/edit.html.erb
+++ b/app/views/users_backoffice/caronas/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', carona: @carona %>
 
-<%= link_to 'Show', users_backoffice_user_carona_path(current_user,@carona) %> |
-<%= link_to 'Back', users_backoffice_user_caronas_path(current_user) %>
+<%= link_to 'Show', users_backoffice_user_carona_path(logged_user.id,@carona) %> |
+<%= link_to 'Back', users_backoffice_user_caronas_path(logged_user.id) %>
