--- a/app/views/users_backoffice/caronas/search.html.erb
+++ b/app/views/users_backoffice/caronas/search.html.erb
@@ -1,3 +1,4 @@
+<p id="notice"><%= notice %></p>
 <h3>Resultado da procura por carona</h3>
 <table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
