--- a/app/views/users_backoffice/points/index.html.erb
+++ b/app/views/users_backoffice/points/index.html.erb
@@ -14,8 +14,8 @@
   <% @caronas.each do |point| %>
     <tr>
       <td><%= point.departure %></td>
-      <td><%= link_to 'Edit', edit_users_backoffice_user_carona_path(current_user,carona, point) %></td>
-      <td><%= link_to 'Destroy', users_backoffice_user_carona_destroy_carona_path(current_user,carona), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Edit', edit_users_backoffice_user_carona_path(logged_user,carona, point) %></td>
+      <td><%= link_to 'Destroy', users_backoffice_user_carona_destroy_carona_path(logged_user,carona), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   </tbody>
