--- a/app/views/admins_backoffice/admins/_form.html.erb
+++ b/app/views/admins_backoffice/admins/_form.html.erb
@@ -16,23 +16,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :name %><br />
-    <%= form.text_field :name, autofocus: true %>
+    <%= form.label :nome %><br />
+    <%= form.text_field :nome, autofocus: true %>
   </div>
 
   <div class="field">
     <%= form.label :iduff %><br />
     <%= form.number_field :iduff, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :password %> <br />
-    <%= form.password_field :password, autofocus: true%>
-  </div>
-
-  <div class="field">
-    <%= form.label :password_confirmation %> <br />
-    <%= form.password_field :password_confirmation, autofocus: true %>
   </div>
 
   <div class="action">
