--- a/app/views/layouts/_header_site.html.erb
+++ b/app/views/layouts/_header_site.html.erb
@@ -6,7 +6,7 @@
       <% if Admin.find_by_iduff(logged_user.iduff) %>
         <li><a><%= link_to 'Campus', admins_backoffice_campus_path, class: 'nav-link px-2 link-gray' %></a></li>
         <li><a><%= link_to 'Usuários', admins_backoffice_users_path, class: 'nav-link px-2 link-gray' %></a></li>
-      <% end %>
+        <li><a><%= link_to 'Admins', admins_backoffice_admins_path, class: 'nav-link px-2 link-gray' %></a></li>     <% end %>
     </ul>
   </nav>
 </header>
